<resources>
    <string name="app_name">Uzungöl Water Quality</string>
    <string name="project_name">Uzungölün Su Kalitesinin İzlenmesinde Sivil Bilim Yaklaşımının İncelenmesi</string>
    <string name="send">Send</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="check_internet_conn">Check your internet connection!</string>
    <string name="data_sent">Data sent successfully</string>
    <string name="measurement">Measurement</string>
    <string name="location">Location</string>
    <string name="location_optional">Location info (optional)</string>
    <string name="location_must">Location info (required)</string>
    <string name="additional_info">Additional info</string>
    <string name="additional_info_optional">Additional info (optional)</string>
    <string name="hacettepe">Hacettepe</string>
    <string name="please_wait">Please wait</string>
    <string name="select_property">Select an observed property from the list to send observation.</string>
    <string name="app_info">Projenin temel amacı, Uzungöl’ün  su kalitesinin izlenmesi amacıyla sivil bilim yaklaşımının uygulanmasıdır. Bu amaca ulaşmak için öncelikle sivil bilim gönüllüleri tarafından su kalite ölçümleri yapılabilecek ölçüm noktaları belirlenecektir. İkinci olarak, göl için kritik olan ve aynı zamanda sivil bilim gönüllüleri tarafından kolay bir şekilde ölçülebilecek su kalite parametreleri belirlenecektir. </string>
    <string name="measurement_cannot_empty">Measurement value cannot be empty!</string>

    <string name="location_needed">Location Permission Needed</string>
    <string name="location_needed_detail">This app needs the Location permission, please accept to use location functionality</string>
    <string name="open_location_service">Location service is closed, please open it.</string>
    <string name="looking_for_gps">Looking for GPS location...</string>
    <string name="continue_">Continue</string>
    <string name="cannot_get_location">Cannot get your location!</string>
    <string name="person_name">Person/Foundation Name</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="set_loc_desc">Please set the location info</string>

</resources>
